# atsofa

./: .gitignore  COPYING  Makefile.am  README  autogen.sh  configure.ac  configure.sh  prepare.sh
c/: Makefile.am
doc/: Makefile.am  iausofa.texi
f77/: Makefile.am  README  a2af.for  a2tf.for  ab.for  af2a.for  anp.for  anpm.for  apcg.for  apcg13.for  apci.for  apci13.for  apco.for  apco13.for  apcs.for  apcs13.for  aper.for  aper13.for  apio.for  apio13.for  atci13.for  atciq.for  atciqn.for  atciqz.for  atco13.for  atic13.for  aticq.for  aticqn.for  atio13.for  atioq.for  atoc13.for  atoi13.for  atoiq.for  bi00.for  bp00.for  bp06.for  bpn2xy.for  c2i00a.for  c2i00b.for  c2i06a.for  (+183 more)
meta/: sofac.pc.in  sofaf.pc.in
tests/: Makefile.am  cal2jd.c
tests-c/: Makefile.am
tests-f77/: Makefile.am  cal2jd.f  t_sofa_f.for
