## Process this file with automake to produce Makefile.in

ACLOCAL_MFLAGS		= -I meta/autotools
SUBDIRS			= c f77 tests-c tests-f77 doc
EXTRA_DIST		= INSTALL
dist_doc_DATA		= README COPYING

## --------------------------------------------------------------------

pkgconfigdir		= $(libdir)/pkgconfig
nodist_pkgconfig_DATA	= meta/sofaf.pc meta/sofac.pc

### end of file
