## Process this file with automake to produce Makefile.in

AM_FFLAGS = -Wall

if WANT_FLIB
lib_LTLIBRARIES		= libsofaf.la
endif
libsofaf_la_LDFLAGS	= -version-info 1:0:0
libsofaf_la_SOURCES	= \
	a2af.for	a2tf.for	af2a.for	\
	anp.for		anpm.for	bi00.for	\
	bp00.for	bp06.for	bpn2xy.for	\
	c2i00a.for	c2i00b.for	c2i06a.for	\
	c2ibpn.for	c2ixy.for	c2ixys.for	\
	c2s.for		c2t00a.for	c2t00b.for	\
	c2t06a.for	c2tceo.for	c2tcio.for	\
	c2teqx.for	c2tpe.for	c2txy.for	\
	cal2jd.for	cp.for		cpv.for		\
	cr.for		d2dtf.for	d2tf.for	\
	dat.for		dtdb.for	dtf2d.for	\
	ee00a.for	ee00b.for	ee00.for	\
	ee06a.for	eect00.for	eform.for	\
	eo06a.for	eors.for	epb2jd.for	\
	epb.for		epj2jd.for	epj.for		\
	epv00.for	eqeq94.for	era00.for	\
	fad03.for	fae03.for	faf03.for	\
	faju03.for	fal03.for	falp03.for	\
	fama03.for	fame03.for	fane03.for	\
	faom03.for	fapa03.for	fasa03.for	\
	faur03.for	fave03.for	fk52h.for	\
	fk5hip.for	fk5hz.for	fw2m.for	\
	fw2xy.for	gc2gde.for	gc2gd.for	\
	gd2gce.for	gd2gc.for	gmst00.for	\
	gmst06.for	gmst82.for	gst00a.for	\
	gst00b.for	gst06a.for	gst06.for	\
	gst94.for	h2fk5.for	hfk5z.for	\
	ir.for		jd2cal.for	jdcalf.for	\
	num00a.for	num00b.for	num06a.for	\
	numat.for	nut00a.for	nut00b.for	\
	nut06a.for	nut80.for	nutm80.for	\
	obl06.for	obl80.for	p06e.for	\
	p2pv.for	p2s.for		pap.for		\
	pas.for		pb06.for	pdp.for		\
	pfw06.for	plan94.for	pmat00.for	\
	pmat06.for	pmat76.for	pm.for		\
	pmp.for		pn00a.for	pn00b.for	\
	pn00.for	pn06a.for	pn06.for	\
	pn.for		pnm00a.for	pnm00b.for	\
	pnm06a.for	pnm80.for	pom00.for	\
	ppp.for		ppsp.for	pr00.for	\
	prec76.for	pv2p.for	pv2s.for	\
	pvdpv.for	pvm.for		pvmpv.for	\
	pvppv.for	pvstar.for	pvu.for		\
	pvup.for	pvxpv.for	pxp.for		\
	rm2v.for	rv2m.for	rx.for		\
	rxp.for		rxpv.for	rxr.for		\
	ry.for		rz.for		s00a.for	\
	s00b.for	s00.for		s06a.for	\
	s06.for		s2c.for		s2p.for		\
	s2pv.for	s2xpv.for	sepp.for	\
	seps.for	sp00.for	starpm.for	\
	starpv.for	sxp.for		sxpv.for	\
	taitt.for	taiut1.for	taiutc.for	\
	tcbtdb.for	tcgtt.for	tdbtcb.for	\
	tdbtt.for	tf2a.for	tf2d.for	\
	tr.for		trxp.for	trxpv.for	\
	t_sofa_f.for	tttai.for	tttcg.for	\
	tttdb.for	ttut1.for	ut1tai.for	\
	ut1tt.for	ut1utc.for	utctai.for	\
	utcut1.for	xy06.for	xys00a.for	\
	xys00b.for	xys06a.for	zp.for		\
	zpv.for		zr.for

### end of file
